--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                       <form class="formEmail__block-box">
                         <!-- Hidden Required Fields -->
                         <input type="hidden" name="project_name" value="Site itCOM">
-                        <input type="hidden" name="admin_email" value="itcorp.stu@gmail.com">
+                        <input type="hidden" name="admin_email" value="corp.stu2023@gmail.com">
                         <input type="hidden" name="form_subject" value="ITcom">
                         <!-- END Hidden Required Fields -->
           
@@ -546,11 +546,8 @@
               </div>
               <div class="footer__contacts-mail grid contacts-block">
                 <p><i class="fas fa-envelope"></i> Mail ...</p>
-                <a href="mail:corp.stu@gmail.com">    
-                  corp.stu@gmail.com
-                </a>
-                <a href="mail:corp.kharkiv@it.od.ua">
-                  corp.kharkiv@it.od.ua
+                <a href="mail:corp.stu2023@gmail.com">
+                  corp.stu2023@gmail.com
                 </a>
               </div>
             </div>
