--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                       <form class="formEmail__block-box">
                         <!-- Hidden Required Fields -->
                         <input type="hidden" name="project_name" value="Site itCOM">
-                        <input type="hidden" name="admin_email" value="corp.stu2023@gmail.com">
+                        <input type="hidden" name="admin_email" value="corp.sty2023@gmail.com">
                         <input type="hidden" name="form_subject" value="ITcom">
                         <!-- END Hidden Required Fields -->
           
@@ -507,7 +507,7 @@
                         </p>
                         <div class="formEmail__block-social--icons">
                           Telegram
-                          <a href="https://t.me/joinchat/NnZgH-A_7-o1NjM6" class="form-telegram telegram"><i class="fab fa-telegram-plane"></i></a>
+                          <a href="https://t.me/+BZTZhiMwDgw0ZDhi" class="form-telegram telegram"><i class="fab fa-telegram-plane"></i></a>
                         </div>
                       </div>
                     </div>
@@ -547,7 +547,7 @@
               <div class="footer__contacts-mail grid contacts-block">
                 <p><i class="fas fa-envelope"></i> Mail ...</p>
                 <a href="mail:corp.stu2023@gmail.com">
-                  corp.stu2023@gmail.com
+                  corp.sty2023@gmail.com
                 </a>
               </div>
             </div>
